fix(navigation): add correct z-index ordering

--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 5rem;
   background: #fff;
+  z-index: theme("zIndex.50");
 }
 
 .navigationList {
